update nach dem "-" problem

--- a/trunk/basement/templates/default/852881080.modify.tem.html
+++ b/trunk/basement/templates/default/852881080.modify.tem.html
@@ -36,15 +36,15 @@
                   <td colspan="2" valign="top"> 
                     <table border="0" cellpadding="4" cellspacing="0" width="100%">
                       <tr> 
-                        <td>#-(oldpass)</td>
+                        <td>#(oldpass)</td>
                         <td>!#element_oldpass</td>
                       </tr>
                       <tr> 
-                        <td>#-(newpass)</td>
+                        <td>#(newpass)</td>
                         <td>!#element_newpass</td>
                       </tr>
                       <tr> 
-                        <td>#-(chkpass)</td>
+                        <td>#(chkpass)</td>
                         <td>!#element_chkpass</td>
                       </tr>
                     </table>
@@ -65,11 +65,11 @@
                 </tr>
                 <tr> 
                   <td> 
-                    <input type="submit" value="#-(senden)" name="submit2">
+                    <input type="submit" value="#(senden)" name="submit2">
                   </td>
                   <td colspan="2" align="right"><a href="!#ausgaben_form_break"> 
-                    <input type="reset" name="Zur&uuml;cksetzen" value="#-(reset)">
-                    </a><a href="!#ausgaben_form_break">#-(abbruch)</a> </td>
+                    <input type="reset" name="Zur&uuml;cksetzen" value="#(reset)">
+                    </a><a href="!#ausgaben_form_break">#(abbruch)</a> </td>
                 </tr>
               </table>
             </td>
