submit wert des button passt jetzt

--- a/trunk/basement/templates/default/852881080.modify.tem.html
+++ b/trunk/basement/templates/default/852881080.modify.tem.html
@@ -65,7 +65,7 @@
                 </tr>
                 <tr> 
                   <td> 
-                    <input type="submit" value="#(senden)" name="submit2">
+                    <input type="submit" value="#(senden)" name="submit">
                   </td>
                   <td colspan="2" align="right"><a href="!#ausgaben_form_break"> 
                     <input type="reset" name="Zur&uuml;cksetzen" value="#(reset)">
