--- a/trunk/basement/templates/default/cms.edit.cmstag.tem.html
+++ b/trunk/basement/templates/default/cms.edit.cmstag.tem.html
@@ -6,6 +6,7 @@
 </head>
 <body bgcolor="#FFFFFF">
 <!--##begin-->
+<!--$Id$-->
 !#ausgaben_ce_script
 <form style="margin:0; padding:0;" action="!#ausgaben_form_aktion" method="post" name="ceform" id="ceform" onsubmit=" return chk()">
   <table width="100%" border="0" cellpadding="0" cellspacing="0">
@@ -37,17 +38,20 @@
       <td>&nbsp;</td>
     </tr>
     <tr> 
-      <td align="right">Zeichen:</td>
+      <td align="right">#(charakters)</td>
       <td> 
         <DIV ID="Zeichen" style="position:relative; visibility:visible;"></DIV>
       </td>
       <td align="right"> 
-        <input type="SUBMIT" value="Speichern" name="SUBMIT">
-        <input type="BUTTON" value="Abbrechen" onClick="self.location.href='!#ausgaben_form_abbrechen'" name="BUTTON">
+        <input type="SUBMIT" value="#(save)" name="SUBMIT">
+        <input type="BUTTON" value="#(abort)" onClick="self.location.href='!#ausgaben_form_abbrechen'" name="BUTTON">
       </td>
     </tr>
     <tr> 
       <td colspan="3">!#ausgaben_tn</td>
+    </tr>
+    <tr>
+      <td colspan="3">!#ausgaben_inaccessible</td>
     </tr>
   </table>
   </FORM>
