--- a/trunk/basement/templates/default/-555504947.edit-single.tem.html
+++ b/trunk/basement/templates/default/-555504947.edit-single.tem.html
@@ -1,10 +1,9 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN">
 <html>
 <head>
-<meta http-equiv="Content-Type"
- content="text/html; charset=iso-8859-1">
+<meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=iso-8859-1">
 <title>menued.edit-sigle</title>
-<link rel="stylesheet" href="../../css/net.css" type="text/css">
+<link rel="stylesheet" href="../../css/default.css" type="text/css">
 </head>
 <body bgcolor="#ffffff">
 <!--##begin-->
@@ -32,30 +31,30 @@
             <td valign="top"> 
               <table border="0" cellspacing="0" cellpadding="0" width="100%">
                 <tr> 
-                  <td colspan="2" class="hervorgehoben">#-(basic)</td>
+                  <td colspan="2" class="hervorgehoben">#(basic)</td>
                 </tr>
                 <tr> 
                   <td>&nbsp;</td>
                   <td>&nbsp;</td>
                 </tr>
                 <tr> 
-                  <td>#-(template)</td>
+                  <td>#(template)</td>
                   <td>!#element_defaulttemplate</td>
                 </tr>
                 <tr> 
-                  <td>#-(entry)</td>
+                  <td>#(entry)</td>
                   <td>!#element_entry</td>
                 </tr>
                 <tr> 
-                  <td>#-(label)</td>
+                  <td>#(label)</td>
                   <td>!#element_label</td>
                 </tr>
                 <tr> 
-                  <td>#-(lang)</td>
+                  <td>#(lang)</td>
                   <td>!#element_lang</td>
                 </tr>
                 <tr> 
-                  <td>#-(exturl)</td>
+                  <td>#(exturl)</td>
                   <td>!#element_exturl</td>
                 </tr>
               </table>
@@ -63,38 +62,37 @@
             <td valign="top"> 
               <table width="100%" border="0" cellspacing="0" cellpadding="0">
                 <tr> 
-                  <td colspan="4" class="hervorgehoben">#-(extended)</td>
+                  <td colspan="4" class="hervorgehoben">#(extended)</td>
                 </tr>
                 <tr> 
                   <td>&nbsp;</td>
                   <td colspan="2">&nbsp;</td>
                 </tr>
                 <tr> 
-                  <td>#-(refid)</td>
+                  <td>#(refid)</td>
                   <td colspan="2">!#element_refid</td>
                 </tr>
                 <tr> 
-                  <td>#-(sort)</td>
+                  <td>#(sort)</td>
                   <td colspan="2">!#element_sort</td>
                 </tr>
                 <tr> 
-                  <td>#-(hide)</td>
+                  <td>#(hide)</td>
                   <td colspan="2">!#element_hide</td>
                 </tr>
                 <tr> 
-                  <td>#-(level)</td>
+                  <td>#(level)</td>
                   <td colspan="2">!#element_level</td>
                 </tr>
                 <tr> 
-                  <td>#-(madatory)</td>
+                  <td>#(madatory)</td>
                   <td colspan="2">!#element_mandatory</td>
                 </tr>
               </table>
             </td>
           </tr>
-          <tr>
-            <td valign="bottom">&nbsp;</td>
-            <td align="right" valign="top">&nbsp;</td>
+          <tr> 
+            <td valign="bottom" colspan="2">&nbsp;</td>
           </tr>
           <tr> 
             <td valign="bottom"> 
