--- a/trunk/basement/templates/default/-555504947.edit-multi.tem.html
+++ b/trunk/basement/templates/default/-555504947.edit-multi.tem.html
@@ -95,7 +95,7 @@
             <td valign="top" colspan="2">&nbsp;</td>
           </tr>
           <tr> 
-            <td valign="top" colspan="2">#-(language)</td>
+            <td valign="top" colspan="2">#(language)</td>
           </tr>
           <tr> 
             <td valign="top" colspan="2">!#ausgaben_langtabelle</td>
@@ -107,7 +107,7 @@
             <td valign="bottom"> 
               <table border="0" cellspacing="0" cellpadding="0">
                 <tr> 
-                  <td>#-(new_lang)&nbsp;</td>
+                  <td>#(new_lang)&nbsp;</td>
                   <td>!#element_new_lang</td>
                   <td> 
                     <input name="add[]22" type="image" title="#(add)" alt="#(add)" src="../../images/default/add.png" width="24" height="18" border="0" value="new">
