--- a/trunk/basement/templates/default/-555504947.edit-single.tem.html
+++ b/trunk/basement/templates/default/-555504947.edit-single.tem.html
@@ -98,7 +98,7 @@
             <td valign="bottom"> 
               <table border="0" cellspacing="0" cellpadding="0">
                 <tr> 
-                  <td>#-(new_lang)&nbsp;</td>
+                  <td>#(new_lang)&nbsp;</td>
                   <td>!#element_new_lang</td>
                   <td> 
                     <input name="add[]2" type="image" title="#(add)" alt="#(add)" src="../../images/default/add.png" width="24" height="18" border="0" value="new">
