--- a/trunk/basement/templates/default/-555504947.edit-single.tem.html
+++ b/trunk/basement/templates/default/-555504947.edit-single.tem.html
@@ -72,6 +72,10 @@
                   <td>#(refid)</td>
                   <td colspan="2">!#element_refid</td>
                 </tr>
+                <tr>
+                  <td>#(picture)</td>
+                  <td colspan="2">!#element_picture</td>
+                </tr>
                 <tr> 
                   <td>#(sort)</td>
                   <td colspan="2">!#element_sort</td>
