um das hidden value erweiterte version

--- a/trunk/basement/templates/default/auth.login.tem.html
+++ b/trunk/basement/templates/default/auth.login.tem.html
@@ -22,7 +22,9 @@
       </td>
     </tr>
     <tr> 
-      <td width="35">&nbsp;</td>
+      <td width="35">
+        <input name="form_referer" type="hidden" value="!#ausgaben_form_referer">
+      </td>
       <td> 
         <input type="submit" name="login" value="login">
       </td>
