--- a/trunk/basement/templates/default/cms.edit-js.tem.html
+++ b/trunk/basement/templates/default/cms.edit-js.tem.html
@@ -47,6 +47,10 @@ function INSst(st,form,field){
         // selText = '';
     }
 
+	if (st=='list' && selText=='') {
+		selText='Element'; 
+	}
+
     // physisch
     if (st=='b')
         st='[B]' + selText + '[\/B]';
@@ -113,7 +117,7 @@ function INSst(st,form,field){
 
     // erweiterte
     else if (st=='list')
-        st='[LIST=1|a]' + selText + '[*]Element[\/LIST]';
+		st='[LIST=1|a]' + selText + '[*]Element[\/LIST]';
     else if (st=='img')
         st='[IMG=image,art\;l]' + selText + '[\/IMG]';
     else if (st=='imgb')
