erweiterung fuer addon:changed

--- a/trunk/basement/templates/default/index.tem.html
+++ b/trunk/basement/templates/default/index.tem.html
@@ -46,8 +46,13 @@
   </tr>
 </table>
 <table width="735" border="0" cellspacing="0" cellpadding="0" align="center">
-  <tr> 
-    <td colspan="2">&nbsp;</td>
+  <tr align="right"> 
+    <td colspan="2">
+      <!--##hide-changed-->
+      Letzte &Auml;nderung !{changed} von <a href="mailto:!{email}">!{alias}</a> 
+      (!{forename} !{surname}) 
+      <!--##show-->
+    </td>
   </tr>
   <tr> 
     <td colspan="2"> 
