p im js code eingebaut

--- a/trunk/basement/templates/default/cms.edit-js.tem.html
+++ b/trunk/basement/templates/default/cms.edit-js.tem.html
@@ -96,6 +96,8 @@ function INSst(st,form,field){
         st='[H1]' + selText + '[\/H1]';
     else if (st=='h2')
         st='[H2]' + selText + '[\/H2]';
+    else if (st=='p')
+        st='[P]' + selText + '[\/P]';
     else if (st=='hr')
         st='[HR][\/HR]';
     else if (st=='sp')
