--- a/trunk/basement/templates/default/imgb.tem.html
+++ b/trunk/basement/templates/default/imgb.tem.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN">
 <html>
 <head>
+<!--$Id$-->
 <meta http-equiv="Content-Type"
  content="text/html; charset=iso-8859-1">
 <title>imgb</title>
@@ -10,15 +11,15 @@
 <!--##begin-->
 <table border="0" !#ausgaben_align cellpadding="0" cellspacing="0">
   <tr>
-    <td colspan="3">!#ausgaben_tspace</td>
+    <td colspan="3"><img border="0" src="../../images/default/pos.png" width="1" height="!#ausgaben_tspace"></td>
   </tr>
   <tr>
-    <td>!#ausgaben_lspace</td>
+    <td><img border="0" src="../../images/default/pos.png" width="!#ausgaben_lspace" height="1"></td>
     <td><table border="0" !#ausgaben_align cellpadding="0" cellspacing="0">
         <tr>
           <td bgcolor="#CCCCCC"><table border="0" cellpadding="0" cellspacing="1">
               <tr bgcolor="#FFFFFF">
-                <td>!#ausgaben_linka<img src="!#ausgaben_imgurl" alt="!#ausgaben_alt" !#ausgaben_imgsize !#ausgaben_border>!#ausgaben_linkb</td>
+                <td>!#ausgaben_linka<img src="!#ausgaben_imgurl" title="!#ausgaben_alt" alt="!#ausgaben_alt" !#ausgaben_imgsize !#ausgaben_border>!#ausgaben_linkb</td>
               </tr>
               <tr bgcolor="#FFFFFF">
                 <td align="left" valign="top">
@@ -33,10 +34,10 @@
       </table></td>
         </tr>
       </table></td>
-    <td>!#ausgaben_rspace</td>
+    <td><img border="0" src="../../images/default/pos.png" width="!#ausgaben_rspace" height="1"></td>
   </tr>
   <tr>
-    <td colspan="3">!#ausgaben_bspace</td>
+    <td colspan="3"><img border="0" src="../../images/default/pos.png" width="1" height="!#ausgaben_bspace"></td>
   </tr>
 </table>
 <!--##end-->
