--- a/trunk/basement/templates/default/imgb.tem.html
+++ b/trunk/basement/templates/default/imgb.tem.html
@@ -9,13 +9,13 @@
 </head>
 <body bgcolor="#ffffff">
 <!--##begin-->
-<table border="0" !#ausgaben_align cellpadding="0" cellspacing="0">
+<table border="0" align="!#ausgaben_align" cellpadding="0" cellspacing="0">
   <tr>
     <td colspan="3"><img border="0" src="../../images/default/pos.png" width="1" height="!#ausgaben_tspace"></td>
   </tr>
   <tr>
     <td><img border="0" src="../../images/default/pos.png" width="!#ausgaben_lspace" height="1"></td>
-    <td><table border="0" !#ausgaben_align cellpadding="0" cellspacing="0">
+    <td><table border="0" align="!#ausgaben_align" cellpadding="0" cellspacing="0">
         <tr>
           <td bgcolor="#CCCCCC"><table border="0" cellpadding="0" cellspacing="1">
               <tr bgcolor="#FFFFFF">
@@ -23,7 +23,7 @@
               </tr>
               <tr bgcolor="#FFFFFF">
                 <td align="left" valign="top">
-<table !#ausgaben_tabwidth border="0" cellpadding="0" cellspacing="0">
+<table width="!#ausgaben_tabwidth" border="0" cellpadding="0" cellspacing="0">
                     <tr>
                       <td><img border=0 src="../../images/default/pos.png" width="8" height="8"></td>
                       <td>!#ausgaben_linka!#ausgaben_beschriftung!#ausgaben_linkb</td>
