--- a/trunk/basement/templates/default/menu.tem.html
+++ b/trunk/basement/templates/default/menu.tem.html
@@ -8,11 +8,11 @@
 <body bgcolor="#FFFFFF">
 <!--##begin-->
 <table width="100%" border="0" cellpadding="0" cellspacing="0">
-  <tr> 
+  <tr>
     <td align="left" valign="middle" nowrap class="gmenu_head" bgcolor="#CCCCCC" colspan="2">!#ausgaben_ordner!#ausgaben_ueberschrift</td>
   </tr>
-  <tr> 
-    <td valign="top" bgcolor="#FFFFFF"><img src="../../images/business/pos.png" width="16" height="1"></td>
+  <tr>
+    <td valign="top" bgcolor="#FFFFFF"><img src="../../images/default/pos.png" width="16" height="1"></td>
     <td valign="top" bgcolor="#FFFFCC" width="100%">!#ausgaben_punkte</td>
   </tr>
 </table>
