steuer elemente umbenannt

--- a/trunk/basement/templates/default/viewer.tem.html
+++ b/trunk/basement/templates/default/viewer.tem.html
@@ -14,7 +14,7 @@
     <td width="100%">
       <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tr>
-          <td><a href="!#ausgaben_referer">Zurück zum Artikel</a></td>
+          <td><a href="!#ausgaben_referer">Zurück</a></td>
         </tr>
         <tr>
           <td>#(ueberschrift)</td>
@@ -24,7 +24,7 @@
         </tr>
         <!--##hide-navi-->
         <tr>
-          <td><a href="!#ausgaben_zurueck">zurueck</a> Bild !#ausgaben_aktuell von !#ausgaben_gesamt <a href="!#ausgaben_vor">vor</a></td>
+          <td><a href="!#ausgaben_zurueck">vorheriges</a> Bild !#ausgaben_aktuell von !#ausgaben_gesamt <a href="!#ausgaben_vor">nächstes</a></td>
         </tr>
         <!--##show-->
         <tr>
