--- a/trunk/basement/templates/default/kontakt-email1.tem.html
+++ b/trunk/basement/templates/default/kontakt-email1.tem.html
@@ -11,12 +11,12 @@ Betreff: !{betreff}
 --------
 Firma:                          !{firma}
 Branche:                        !{branche}
-Ansprechpartner:                !{branche}
-Straﬂe:                         !{strasse}
+Ansprechpartner:                !{ansprechpartner}
+Strasse:                        !{strasse}
 PLZ, Ort:                       !{plz} !{ort}
 Telefon:                        !{telefon}
-Fax:                            !{email}
-eMail Adresse:                  !{email}
+Fax:                            !{fax}
+eMail Adresse:                  !{e-mail}
 
 Mitteilung:
 -----------
