--- a/trunk/basement/templates/default/kontakt-email2.tem.html
+++ b/trunk/basement/templates/default/kontakt-email2.tem.html
@@ -19,12 +19,12 @@ Betreff: !{betreff}
 --------
 Firma:                          !{firma}
 Branche:                        !{branche}
-Ansprechpartner:                !{branche}
-Straﬂe:                         !{strasse}
+Ansprechpartner:                !{ansprechpartner}
+Strasse:                        !{strasse}
 PLZ, Ort:                       !{plz} !{ort}
 Telefon:                        !{telefon}
-Fax:                            !{email}
-eMail Adresse:                  !{email}
+Fax:                            !{fax}
+eMail Adresse:                  !{e-mail}
 
 Mitteilung:
 -----------
@@ -33,6 +33,7 @@ Mitteilung:
 Mit freundlichen Gruessen
 
 Ihre Firma
+
 
 Hinweis: Dieses E-Mail wurde automatisch erstellt.
 <!--##end-->
