--- a/trunk/basement/templates/default/imgb.tem.html
+++ b/trunk/basement/templates/default/imgb.tem.html
@@ -19,7 +19,7 @@
         <tr>
           <td bgcolor="#CCCCCC"><table border="0" cellpadding="0" cellspacing="1">
               <tr bgcolor="#FFFFFF">
-                <td>!#ausgaben_linka<img src="!#ausgaben_imgurl" title="!#ausgaben_alt" alt="!#ausgaben_alt" !#ausgaben_imgsize !#ausgaben_border>!#ausgaben_linkb</td>
+                <td>!#ausgaben_linka<img src="!#ausgaben_imgurl" class="!#ausgaben_imgstyle" title="!#ausgaben_alt" alt="!#ausgaben_alt" !#ausgaben_imgsize !#ausgaben_border>!#ausgaben_linkb</td>
               </tr>
               <tr bgcolor="#FFFFFF">
                 <td align="left" valign="top">
