css und js ab jetzt im design subdir

--- a/trunk/basement/templates/default/base.tem.html
+++ b/trunk/basement/templates/default/base.tem.html
@@ -4,6 +4,8 @@
 <head>
 <!--$Id$-->
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<link rel="stylesheet" href="../../css/default/screen.css" type="text/css" title="Screen">
+<script type="text/javascript" src="../../js/default/script.js"></script>
 <title>!#specialvars_pagetitle</title>
 </head>
 <body bgcolor="#FFFFFF">
