--- a/trunk/basement/templates/stylesheet/base.tem.html
+++ b/trunk/basement/templates/stylesheet/base.tem.html
@@ -1,6 +1,7 @@
 <!--##begin-->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
+<!--$Id: base.tem.html 599 2007-07-24 07:28:49Z chaot $-->
 <head>
     <meta name="author" content="Werner Ammon (chaos.de)" />
     <meta http-equiv="content-type" content="text/html;charset=iso-8859-1" />
