--- a/trunk/basement/templates/stylesheet/search.tem.html
+++ b/trunk/basement/templates/stylesheet/search.tem.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
+<!--$Id: base.tem.html 599 2007-07-24 07:28:49Z chaot $-->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <title>search</title>
