--- a/trunk/basement/templates/stylesheet/search.tem.html
+++ b/trunk/basement/templates/stylesheet/search.tem.html
@@ -11,7 +11,7 @@
 #(inhalt)
 <!--##hidedata-result-->
 <!--##loop-result-->
-<h2>!{found_in}</h2>
+<h2><a href="!{url}">!{found_in}</a></h2>
 <p>!{content}</p>
 <!--##cont-->
 <!--##show-->
