base hatte gefehlt

--- a/trunk/basement/templates/stylesheet/base.tem.html
+++ b/trunk/basement/templates/stylesheet/base.tem.html
@@ -4,7 +4,7 @@
 <!--$Id: base.tem.html 599 2007-07-24 07:28:49Z chaot $-->
 <head>
     <meta name="author" content="Werner Ammon (chaos.de)" />
-    <meta http-equiv="content-type" content="text/html;charset=iso-8859-1" />
+    <meta http-equiv="content-type" content="text/html;charset=iso-8859-15" />
     <link rel="stylesheet" href="../../css/stylesheet/screen.css" type="text/css" />
     <title>!#specialvars_pagetitle</title>
 </head>
@@ -28,9 +28,14 @@
 
 
         <div id="navi">
+            <div id="list">
             <ul>
                 !#ausgaben_menu
             </ul>
+            </div>
+            <div id="lock">
+                &nbsp;
+            </div>
         </div>
 
 
