--- a/trunk/basement/templates/stylesheet/852881080.modify.tem.html
+++ b/trunk/basement/templates/stylesheet/852881080.modify.tem.html
@@ -31,9 +31,9 @@
         !#element_chkpass
         <input name="form_referer" type="hidden" value="!#ausgaben_form_referer" class="hidden" />
         <div class="clearer">&nbsp;</div>
-        <input type="button" name="absenden" value="Senden" class="first" />
-        <input type="reset" name="Zur&uuml;cksetzen" value="#(reset)" class="next" />
-        <input type="button" name="button" value="#(abort)" onClick="location='!#ausgaben_form_break'" class="next" />
+        <input type="submit" name="send" value="Senden" class="first" />
+        <input type="reset" name="reset" value="#(reset)" class="next" />
+        <input type="button" name="abort" value="#(abort)" onClick="location='!#ausgaben_form_break'" class="next" />
         <div class="clearer">&nbsp;</div>
     <p>!#ausgaben_output</p>
     <p>!#ausgaben_inaccessible</p>
